@@ -1,5 +1,8 @@
 Release 1.14 - ???
 
+  * Maintain more significant digits in cells of "General" format
+    in XLS and XLSX (TIKA-2025).
+
   * Avoid mark/reset issues when extracting or detecting embedded resources
     in RFC822 emails (TIKA-2037).
 
